testsuite/tests/typecheck/should_fail/tcfail013.alan
redefError() : proc
  foo : int;
  foo : byte;
{
  foo = 5;
  foo = 'a';
}
